--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <!-- das ist ein kommentar von nico -->
+
     <!-- einbinden von d3js -->
     <script src="https://d3js.org/d3.v5.min.js" charset="utf-8"></script>
     <script type="text/javascript" src="index.js"></script>
@@ -16,6 +17,14 @@
   </head>
   <body>
     <div class="container">
+      <h1>Hello, world!</h1>
+      <h1>Hello, world!</h1>
+      <h1>Hello, world!</h1>
+      <h1>Hello, world!</h1>
+      <h1>Hello, world!</h1>
+      <h1>Hello, world!</h1>
+      <h1>Hello, world!</h1>
+      <h1>Hello, world!</h1>
       <h1>Hello, world!</h1>
       <button type="button" class="btn btn-primary" onclick="aktualisiere()">Press to play</button>
     <div id="content"></div>
