--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   <script src="https://d3js.org/d3.v5.min.js" charset="utf-8"></script>
   <script type="text/javascript" src="index.js"></script>
 
+  <link rel="stylesheet" type="text/css" href="index.css" />
+
   <title>Systemstatus 2</title>
 </head>
 
