--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <script src="https://d3js.org/d3.v5.min.js" charset="utf-8"></script>
   <script type="text/javascript" src="index.js"></script>
 
-  <link rel="stylesheet" type="text/css" href="index.css" />
+  <link rel="stylesheet" type="text/css" href="styles.css" />
 
   <title>Systemstatus 2</title>
 </head>
