ul list implemented but not working

--- a/index.html
+++ b/index.html
@@ -22,12 +22,15 @@
 
 <body>
   <div class="container">
-    <h1>Hello, world!</h1>
+    <h1>Modul Fischertechnik</h1>
     <table class="table">
       <tbody>
         <tr>
           <td>
-            <div id="content1"></div>
+            <div >
+              <h2>Anzahl Statusänderungen</h1>
+                <div id="content1"></div>
+            </div>
           </td>
           <td>
             <div id="content2"></div>
@@ -35,7 +38,10 @@
         </tr>
         <tr>
           <td>
-            <div id="content3"></div>      
+            <div>
+              <h2>Kumulierte Wegstrecke</h1>
+                <div id="content3"></div>
+            </div>      
           </td>
           <td>
             <div id="content4"></div>
