--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
   <title>Systemstatus 2</title>
 </head>
 
-<body>
+<body onload="initialisiere()">
+  
   <div class="container">
     <h1>Modul Fischertechnik</h1>
     <table class="table">
@@ -29,7 +30,11 @@
           <td>
             <div >
               <h2>Anzahl Statusänderungen</h1>
-                <div id="content1"></div>
+                <div>
+                  <ul id="content1">
+
+                  </ul>
+                </div>
             </div>
           </td>
           <td>
