--- a/index.html
+++ b/index.html
@@ -31,7 +31,16 @@
             <div >
               <h2>Anzahl Statusänderungen</h1>
                 <div>
-                  <ul id="content1">
+                  <ul id="hochregallager">
+
+                  </ul>
+                  <ul id="verteilstation">
+
+                  </ul>
+                  <ul id="bearbeitungsstation">
+
+                  </ul>
+                  <ul id="sortierstation">
 
                   </ul>
                 </div>
