--- a/index.html
+++ b/index.html
@@ -21,33 +21,28 @@
 </head>
 
 <body onload="initialisiere()">
-  
+
   <div class="container">
     <h1>Modul Fischertechnik</h1>
     <table class="table">
       <tbody>
         <tr>
           <td>
-            <div >
+            <div>
               <h2>Anzahl Statusänderungen</h1>
-                <div>
-                  <ul id="hochregallager">
+                <ul id="hochregallager">
 
-                  </ul>
-                  <ul id="verteilstation">
+                </ul>
+                <ul id="verteilstation">
 
-                  </ul>
-                  <ul id="bearbeitungsstation">
+                </ul>
+                <ul id="bearbeitungsstation">
 
-                  </ul>
-                  <ul id="sortierstation">
+                </ul>
+                <ul id="sortierstation">
 
-                  </ul>
-                </div>
+                </ul>
             </div>
-          </td>
-          <td>
-            <div id="content2"></div>
           </td>
         </tr>
         <tr>
@@ -55,7 +50,7 @@
             <div>
               <h2>Kumulierte Wegstrecke</h1>
                 <div id="content3"></div>
-            </div>      
+            </div>
           </td>
           <td>
             <div id="content4"></div>
@@ -64,18 +59,18 @@
       </tbody>
     </table>
   </div>
-  
+
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous"></script>
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+  </script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-    crossorigin="anonymous"></script>
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+  </script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-    integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-    crossorigin="anonymous"></script>
+    integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
+  </script>
 </body>
 
 </html>
