--- a/index.html
+++ b/index.html
@@ -29,21 +29,31 @@
         <tr>
           <td>
             <div>
-              <h2>Anzahl Statusänderungen</h1>
-                <ul id="hochregallager">
+              <h2>Anzahl Statusänderungen:</h2>
+              <ul id="hochregallager">
 
-                </ul>
-                <ul id="verteilstation">
+              </ul>
+              <ul id="verteilstation">
 
-                </ul>
-                <ul id="bearbeitungsstation">
+              </ul>
+              <ul id="bearbeitungsstation">
 
-                </ul>
-                <ul id="sortierstation">
+              </ul>
+              <ul id="sortierstation">
 
-                </ul>
+              </ul>
             </div>
           </td>
+
+          <td>
+            <div>
+              <h2>Kumulierte Wegstrecke:</h2>
+              <ul id="verteilstation_schwenkarm">
+                
+              </ul>
+            </div>
+          </td>
+
         </tr>
         <tr>
           <td>
