index html grundgeruest

--- a/index.html
+++ b/index.html
@@ -25,46 +25,56 @@
   <div class="container">
     <h1>Modul Fischertechnik</h1>
     <table class="table">
+      <h2>Anzahl Statusänderungen:</h2>
       <tbody>
         <tr>
           <td>
-            <div>
-              <h2>Anzahl Statusänderungen:</h2>
-              <ul id="hochregallager">
-
-              </ul>
-              <ul id="verteilstation">
-
-              </ul>
-              <ul id="bearbeitungsstation">
-
-              </ul>
-              <ul id="sortierstation">
-
-              </ul>
-            </div>
+            <h3>Hochregallager:</h3>
+            <ul id="hochregallager"></ul>
           </td>
-
-          <td>
-            <div>
-              <h2>Kumulierte Wegstrecke:</h2>
-              <ul id="verteilstation_schwenkarm">
-                
-              </ul>
-            </div>
-          </td>
-
+          <td></td><!-- Diagramm-->
         </tr>
         <tr>
           <td>
-            <div>
-              <h2>Kumulierte Wegstrecke</h1>
-                <div id="content3"></div>
-            </div>
+            <h3>Verteilstation:</h3>
+            <ul id="verteilstation"></ul>
           </td>
+          <td></td><!-- Diagramm-->
+        </tr>
+        <tr>
           <td>
-            <div id="content4"></div>
+            <h3>Bearbeitungsstation:</h3>
+            <ul id="bearbeitungsstation"></ul>
           </td>
+          <td></td><!-- Diagramm-->
+        </tr>
+        <tr>
+          <td>
+            <h3>Sortierstation:</h3>
+            <ul id="sortierstation"></ul>
+          </td>
+          <td></td><!-- Diagramm-->
+        </tr>
+      </tbody>
+    </table>
+
+
+    <table class="table">
+      <h2>Kumulierte Wegstrecken:</h2>
+      <tbody>
+        <tr>
+          <td>
+            <h3>Verteilstation Schwenkarm:</h3>
+            <ul id="verteilstation_schwenkarm"></ul>
+          </td>
+          <td></td><!-- Diagramm-->
+        </tr>
+        <tr>
+          <td>
+            <h3>Sortierstation Fließband:</h3>
+            <ul id="sortierstation_ließband"></ul>
+          </td>
+          <td></td><!-- Diagramm-->
         </tr>
       </tbody>
     </table>
