--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <h3>Hochregallager:</h3>
             <ul id="hochregallager"></ul>
           </td>
-          <td></td><!-- Diagramm-->
+          <td> <div id="hochregallagerG"></div></td><!-- Diagramm-->
         </tr>
         <tr>
           <td>
