--- a/index.html
+++ b/index.html
@@ -58,21 +58,21 @@
             <h3>Verteilstation:</h3>
             <ul id="verteilstation"></ul>
           </td>
-          <td></td><!-- Diagramm-->
+          <td><div id="verteilstationG"></div></td><!-- Diagramm-->
         </tr>
         <tr>
           <td>
             <h3>Bearbeitungsstation:</h3>
             <ul id="bearbeitungsstation"></ul>
           </td>
-          <td></td><!-- Diagramm-->
+          <td><div id="bearbeitungsstationG"></div></td><!-- Diagramm-->
         </tr>
         <tr>
           <td>
             <h3>Sortierstation:</h3>
             <ul id="sortierstation"></ul>
           </td>
-          <td></td><!-- Diagramm-->
+          <td><div id="sortierstationG"></div></td><!-- Diagramm-->
         </tr>
       </tbody>
     </table>
