--- a/index.html
+++ b/index.html
@@ -43,10 +43,12 @@
   </nav>
   
   <div class="trafficlight" id="trafficLight">
-    <div class="circle" color="red"></div>
-    <div class="circle" color="yellow"></div>
-    <div class="circle" color="green"></div>
-    <div class="circle" color="white"></div>
+    <div class="circle red" color="red">
+      <p class="percentage">80%</p>
+    </div>
+    <div class="circle yellow" color="yellow"><p class="percentage">10%</p></div>
+    <div class="circle green" color="green"><p class="percentage">3%</p></div>
+    <div class="circle white" color="white"><p class="percentage">7%</p></div>
   </div>
   <div class="container">
     <h1>Modul Fischertechnik</h1>
