--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </div>
   </nav>
   
-  <div class="trafficlight" id="trafficLight">
+  <div class="trafficlight" id="trafficlight">
     <div class="circle red" color="red">
       <p class="percentage">80%</p>
     </div>
@@ -50,6 +50,7 @@
     <div class="circle green" color="green"><p class="percentage">3%</p></div>
     <div class="circle white" color="white"><p class="percentage">7%</p></div>
   </div>
+
   <div class="container">
     <h1>Modul Fischertechnik</h1>
     <table class="table" id="tableFischertechnik">
