--- a/index.html
+++ b/index.html
@@ -39,19 +39,19 @@
           <a class="nav-link" href="#">Festo</a>
         </li>
       </ul>
+      <!-- Traffic Light -->
+      <div class="trafficlight" id="trafficlight">
+        <div class="circle red" color="red">
+          <p class="percentage">80%</p>
+        </div>
+        <div class="circle yellow" color="yellow"><p class="percentage">10%</p></div>
+        <div class="circle green" color="green"><p class="percentage">3%</p></div>
+        <div class="circle white" color="white"><p class="percentage">7%</p></div>
+      </div>
     </div>
   </nav>
   
-  <div class="trafficlight" id="trafficlight">
-    <div class="circle red" color="red">
-      <p class="percentage">80%</p>
-    </div>
-    <div class="circle yellow" color="yellow"><p class="percentage">10%</p></div>
-    <div class="circle green" color="green"><p class="percentage">3%</p></div>
-    <div class="circle white" color="white"><p class="percentage">7%</p></div>
-  </div>
-
-  <div class="container">
+  <div class="container-fluid">
     <h1>Modul Fischertechnik</h1>
     <table class="table" id="tableFischertechnik">
       <h2>Anzahl Statusänderungen:</h2>
