--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </div>
   </nav>
   
-  <div class="container-fluid">
+  <div class="container">
     <h1>Modul Fischertechnik</h1>
     <table class="table" id="tableFischertechnik">
       <h2>Anzahl Statusänderungen:</h2>
