final nach meeting

--- a/index.html
+++ b/index.html
@@ -22,100 +22,103 @@
 </head>
 
 <body onload="initialisiere()">
-  
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">Historie & Datensammlung</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
-        aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Fischertechnik <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Festo</a>
-          </li>
-        </ul>
-        <!-- Traffic Light -->
-        <div class="trafficlight" id="trafficlight">
-          <div id="lightred" class="circle red" color="red">
-          </div>
-          <div id="lightyellow" class="circle yellow" color="yellow">
-          </div>
-          <div id="lightgreen" class="circle green" color="green">
-          </div>
-          <div id="lightwhite" class="circle white" color="white">
-          </div>
+
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="#">Historie & Datensammlung</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
+      aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Fischertechnik <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Festo</a>
+        </li>
+      </ul>
+      <!-- Traffic Light -->
+      <div class="trafficlight" id="trafficlight">
+        <div id="lightred" class="circle red" color="red">
+        </div>
+        <div id="lightyellow" class="circle yellow" color="yellow">
+        </div>
+        <div id="lightgreen" class="circle green" color="green">
+        </div>
+        <div id="lightwhite" class="circle white" color="white">
         </div>
       </div>
-    </nav>
 
-    <div class="container">
-    <h1>Modul Fischertechnik</h1>
-    <h2>Anzahl Statusänderungen</h2>
-    <div class="row">
-      <div class="col-sm">
-        <h3>Hochregallager:</h3>
-        <ul id="hochregallager"></ul>
-      </div>
-      <div id="hochregallagerG" class="col-sm">
+  </nav>
 
-      </div>
+  <div class="container">
 
+
+  
+  <h1>Modul Fischertechnik</h1>
+  <h2>Anzahl Statusänderungen</h2>
+  <div class="row">
+    <div class="col-6">
+      <h3>Hochregallager:</h3>
+      <ul id="hochregallager"></ul>
+    </div>
+    <div id="hochregallagerG" class="col-6">
+      <!--Graph-->
     </div>
 
-    <div class="row">
-      <div class="col-sm">
-        <h3>Verteilstation:</h3>
-        <ul id="verteilstation"></ul>
-      </div>
-      <div id="verteilstationG" class="col-sm">
+  </div>
 
-      </div>
+  <div class="row">
+    <div class="col-6">
+      <h3>Verteilstation:</h3>
+      <ul id="verteilstation"></ul>
     </div>
+    <div id="verteilstationG" class="col-6">
 
-    <div class="row">
-      <div class="col-sm">
-        <h3>Bearbeitungsstation:</h3>
-        <ul id="bearbeitungsstation"></ul>
-      </div>
-      <div id="bearbeitungsstationG" class="col-sm">
-      </div>
     </div>
+  </div>
 
-    <div class="row">
-      <div class="col-sm">
-        <h3>Sortierstation:</h3>
-        <ul id="sortierstation"></ul>
-      </div>
-      <div id="sortierstationG" class="col-sm">
-      </div>
+  <div class="row">
+    <div class="col-6">
+      <h3>Bearbeitungsstation:</h3>
+      <ul id="bearbeitungsstation"></ul>
     </div>
-
-
-    <h2>Kummulierte Wegstrecke</h2>
-    <div class="row">
-      <div class="col-sm">
-        <h3>Verteilstation Schwenkarm:</h3>
-        <ul id="verteilstation_schwenkarm"></ul>
-      </div>
-      <div class="col-sm">
-        One of three columns
-      </div>
+    <div id="bearbeitungsstationG" class="col-6">
     </div>
+  </div>
 
-
-    <div class="row">
-      <div class="col-sm">
-        <h3>Sortierstation Fließband:</h3>
-        <ul id="sortierstation_ließband"></ul>
-      </div>
-      <div class="col-sm">
-        One of three columns
-      </div>
+  <div class="row">
+    <div class="col-6">
+      <h3>Sortierstation:</h3>
+      <ul id="sortierstation"></ul>
     </div>
+    <div id="sortierstationG" class="col-6">
+    </div>
+  </div>
+
+
+  <h2>Kummulierte Wegstrecke</h2>
+  <div class="row">
+    <div class="col-6">
+      <h3>Verteilstation Schwenkarm:</h3>
+      <ul id="verteilstation_schwenkarm"></ul>
+    </div>
+    <div class="col-6">
+      One of three columns
+    </div>
+  </div>
+
+
+  <div class="row">
+    <div class="col-6">
+      <h3>Sortierstation Fließband:</h3>
+      <ul id="sortierstation_ließband"></ul>
+    </div>
+    <div class="col-sm">
+      One of three columns
+    </div>
+  </div>
   </div>
 
 
@@ -131,4 +134,5 @@
     integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
     </script>
 </body>
+
 </html>
