--- a/index.html
+++ b/index.html
@@ -154,7 +154,18 @@
         <ul id="hochregallager_comulate"></ul>
       </div>
       <div class="col-6">
-        One of three columns
+        column
+      </div>
+    </div>
+
+    <h2>Umdrehungen</h2>
+    <div class="row">
+      <div class="col-6">
+        <h3>Verteilstation Umdrehungen Schwenkarm:</h3>
+        <ul id="verteilstation_umdrehungen_schwenkarm"></ul>
+      </div>
+      <div class="col-6">
+       column
       </div>
     </div>
 
