--- a/index.html
+++ b/index.html
@@ -158,6 +158,16 @@
       </div>
     </div>
 
+    <div class="row">
+      <div class="col-6">
+        <h3>Bearbeitungsstation</h3>
+        <ul id="bearbeitungsstation_cumulate"></ul>
+      </div>
+      <div class="col-6">
+        One of three columns
+      </div>
+    </div>
+      
     <h2>Umdrehungen</h2>
     <div class="row">
       <div class="col-6">
