--- a/index.html
+++ b/index.html
@@ -49,9 +49,6 @@
 
   </nav>
 
-
-
-
   <div class="container">
     <h1>Modul Fischertechnik</h1>
 
@@ -88,7 +85,7 @@
       </div>
 
 
-      <div class="col-3">
+      <div id="btnAbfrage" class="col-3">
         <button type="button" class="btn btn-success" onclick="prepareDate()">Werte abfragen</button>
 
       </div>
