--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <ul id="verteilstation"></ul>
       </div>
       <div id="verteilstationG" class="col-6">
-
+        <!--Graph-->
       </div>
     </div>
 
@@ -121,6 +121,7 @@
         <ul id="bearbeitungsstation"></ul>
       </div>
       <div id="bearbeitungsstationG" class="col-6">
+        <!--Graph-->
       </div>
     </div>
 
@@ -130,6 +131,7 @@
         <ul id="sortierstation"></ul>
       </div>
       <div id="sortierstationG" class="col-6">
+        <!--Graph-->
       </div>
     </div>
 
@@ -140,8 +142,8 @@
         <h3>Verteilstation Schwenkarm:</h3>
         <ul id="verteilstation_comulate"></ul>
       </div>
-      <div class="col-6">
-        One of three columns
+      <div id="VerteilstationSchwenkarmWegstrecke" class="col-6">
+        <!--Graph-->
       </div>
     </div>
 
@@ -151,7 +153,7 @@
         <ul id="hochregallager_comulate"></ul>
       </div>
       <div class="col-6">
-        column
+       
       </div>
     </div>
 
@@ -161,7 +163,6 @@
         <ul id="bearbeitungsstation_cumulate"></ul>
       </div>
       <div class="col-6">
-        One of three columns
       </div>
     </div>
       
@@ -172,7 +173,6 @@
         <ul id="verteilstation_umdrehungen_schwenkarm"></ul>
       </div>
       <div class="col-6">
-       column
       </div>
     </div>
 
@@ -184,7 +184,6 @@
         <ul id="bearbeitungsstation_motorenlaufzeit"></ul>
       </div>
       <div class="col-6">
-        One of three columns
       </div>
     </div>
 
@@ -194,7 +193,6 @@
         <ul id="sortierstation_motorenlaufzeit"></ul>
       </div>
       <div class="col-6">
-        One of three columns
       </div>
     </div>
 
