Revert "Dev6 nico"

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <ul id="verteilstation"></ul>
       </div>
       <div id="verteilstationG" class="col-6">
-        <!--Graph-->
+
       </div>
     </div>
 
@@ -121,7 +121,6 @@
         <ul id="bearbeitungsstation"></ul>
       </div>
       <div id="bearbeitungsstationG" class="col-6">
-        <!--Graph-->
       </div>
     </div>
 
@@ -131,7 +130,6 @@
         <ul id="sortierstation"></ul>
       </div>
       <div id="sortierstationG" class="col-6">
-        <!--Graph-->
       </div>
     </div>
 
@@ -142,8 +140,8 @@
         <h3>Verteilstation Schwenkarm:</h3>
         <ul id="verteilstation_comulate"></ul>
       </div>
-      <div id="VerteilstationSchwenkarmWegstrecke" class="col-6">
-        <!--Graph-->
+      <div class="col-6">
+        One of three columns
       </div>
     </div>
 
@@ -153,7 +151,7 @@
         <ul id="hochregallager_comulate"></ul>
       </div>
       <div class="col-6">
-       
+        column
       </div>
     </div>
 
@@ -163,6 +161,7 @@
         <ul id="bearbeitungsstation_cumulate"></ul>
       </div>
       <div class="col-6">
+        One of three columns
       </div>
     </div>
       
@@ -173,6 +172,7 @@
         <ul id="verteilstation_umdrehungen_schwenkarm"></ul>
       </div>
       <div class="col-6">
+       column
       </div>
     </div>
 
@@ -184,6 +184,7 @@
         <ul id="bearbeitungsstation_motorenlaufzeit"></ul>
       </div>
       <div class="col-6">
+        One of three columns
       </div>
     </div>
 
@@ -193,6 +194,7 @@
         <ul id="sortierstation_motorenlaufzeit"></ul>
       </div>
       <div class="col-6">
+        One of three columns
       </div>
     </div>
 
