Sense check for filter added; Colors in navbar added;

--- a/festo.html
+++ b/festo.html
@@ -47,18 +47,18 @@
 <body onload="initialisiere()">
   
     <nav class="navbar navbar-custom navbar-expand-lg">
-      <a class="navbar-brand navlinkc" href="#">Historie & Datensammlung</a>
+      <a class="navbar-brand navlinkc" href="./index.html">Historie & Datensammlung</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
         aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-          <li class="nav-item active">
+          <li class="nav-item ">
             <a class="nav-link navlinkc" href="./index.html">Fischertechnik <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link navlinkc" href="">Festo</a>
+            <a class="nav-link navlinkc active" href="">Festo</a>
           </li>
         </ul>
         <img src="pid4cps.png" style="width: 6rem;">
