--- a/index.html
+++ b/index.html
@@ -51,15 +51,15 @@
 <body onload="initialisiere()">
   
     <nav class="navbar navbar-custom navbar-expand-lg">
-      <a class="navbar-brand navlinkc" href="#">Historie & Datensammlung</a>
+      <a class="navbar-brand navlinkc" href="./index.html"">Historie & Datensammlung</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
         aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-          <li class="nav-item active">
-            <a class="nav-link navlinkc" href="">Fischertechnik <span class="sr-only">(current)</span></a>
+          <li class="nav-item ">
+            <a class="nav-link navlinkc active" href="">Fischertechnik <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link navlinkc" href="./festo.html">Festo</a>
